--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "paths": {
       "@components/*": [
-        "./src/components/*"
+        "src/screens/*"
       ],
     }
   }
