--- a/app-ble/android/app/src/main/AndroidManifest.xml
+++ b/app-ble/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
-      <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCqCbXx00VMtS5WY2c7wsoB5oeJ8tyF6C8"/>
+      <meta-data android:name="com.google.android.geo.API_KEY" android:value="" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
