--- a/app-ble/package.json
+++ b/app-ble/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/themed": "^4.0.0-rc.7",
     "@shopify/react-native-skia": "^0.1.137",
+    "axios": "^1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-ble-plx": "^2.0.3",
