--- a/app-ble/package.json
+++ b/app-ble/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.7",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -18,6 +19,7 @@
     "@shopify/react-native-skia": "^0.1.137",
     "axios": "^1.4.0",
     "react": "18.0.0",
+    "react_native_mqtt": "^1.3.1",
     "react-native": "0.69.3",
     "react-native-ble-plx": "^2.0.3",
     "react-native-device-info": "^10.2.0",
